--- a/ml-agents-master/config/trainer_config.yaml
+++ b/ml-agents-master/config/trainer_config.yaml
@@ -287,15 +287,32 @@ Basic:
             strength: 1.0
             gamma: 0.9
 
-PenguinLearning:
-	summary_freq: 5000
-	time_horizon: 128
-	batch_size: 128
-	buffer_size: 2048
-	hidden_units: 256
-	beta: 1.0e-2
-	max_steps: 1.0e6
-	reward_signals:
+PenguinPlayerBrain:
+    summary_freq: 5000
+    time_horizon: 128
+    batch_size: 128
+    buffer_size: 2048
+    hidden_units: 256
+    beta: 1.0e-2
+    max_steps: 5.0e7
+    reward_signals:
+        extrinsic:
+            strength: 1.0
+            gamma: 0.99
+        curiosity:
+            strength: 0.01
+            gamma: 0.99
+            encoding_size: 256
+
+TestCarBrain:
+    summary_freq: 1000
+    time_horizon: 128
+    batch_size: 128
+    buffer_size: 2048
+    hidden_units: 256
+    beta: 1.0e-2
+    max_steps: 5.0e7
+    reward_signals:
         extrinsic:
             strength: 1.0
             gamma: 0.99
